# Claude-yaml

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/: add-model.md  ai-native-transform.md  benchmark.md  debug-perf.md  deploy.md  optimize-kernel.md
.claude/skills/add-model/: SKILL.md
.claude/skills/ai-native-transform/: SKILL.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/ci-test/: SKILL.md
.claude/skills/debug-perf/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/gardening/: SKILL.md
.claude/skills/optimize-kernel/: SKILL.md
.claude/skills/parallel-dev/: SKILL.md
.claude/skills/profile-perf/: SKILL.md
.claude/skills/refactor-legacy/: SKILL.md
.claude/skills/review-worktree/: SKILL.md
benchmarks/: CLAUDE.md  __init__.py
configs/: CLAUDE.md
configs/ci/: CLAUDE.md  test-env.yaml  test-matrix.yaml
configs/model_configs/: llama3_70b.yaml  sdxl.yaml
configs/quantization_configs/: fp8_w8a8.yaml
configs/serving_configs/: single_gpu.yaml
docs/: CORE_BELIEFS.md  QUALITY_SCORE.md
docs/claude/: agent-team-protocol.md  cluster-config.yaml.md  global-claude-md-template.md  remote-verification-workflow.md
docs/design-docs/: INDEX.md
docs/exec-plans/: INDEX.md
docs/references/: README.md
inference_engine/: CLAUDE.md  __init__.py
inference_engine/api/: CLAUDE.md  __init__.py
inference_engine/api/client/: CLAUDE.md  (+1 more)
inference_engine/runtime/: CLAUDE.md  __init__.py
scripts/: CLAUDE.md
scripts/ci/: CLAUDE.md  collect-profile.sh  run-remote-tests.sh
tests/: CLAUDE.md
(+69 files in other folders)
