[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "inference-engine"
version = "0.1.0"
description = "LLM and visual generation inference engine"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "grpcio>=1.62.0",
    "numpy>=1.26.0",
    "triton>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4.0"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
